Big Making! Fixing the Procedual Generation Right Now

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,3 +1,4 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=98E4EF1146ABE20DCA898582AB0EC020
-ProjectName=Third Person BP Game Template
+ProjectName=Project Coffee Lake
+
