--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,4 +1,5 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=98E4EF1146ABE20DCA898582AB0EC020
-ProjectName=Project Coffee Lake
+ProjectName=Tupop -save the world-
+CopyrightNotice=SAME Studio
 
