--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,9 +3,9 @@ GameName=ProjectCoffeeLake
 
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/ThirdPersonBP/Maps/Map1.Map1
-GameDefaultMap=/Game/ThirdPersonBP/Maps/Map1.Map1
+GameDefaultMap=/Game/ThirdPersonBP/Maps/Main_Menu.Main_Menu
 TransitionMap=
-bUseSplitscreen=True
+bUseSplitscreen=False
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 GlobalDefaultGameMode=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode.ThirdPersonGameMode_C
@@ -70,5 +70,3 @@ AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
-
-
